--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/Users/fess/anaconda3/bin/python"
+    "python.pythonPath": "/Users/fess/anaconda3/bin/python",
+    "python.linting.enabled": true
 }
